src/objects/Requirement__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Jobs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Experience_Type__c</fullName>
        <globalPicklist>Experience_Type</globalPicklist>
        <label>Experience Type</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Final_Education_Level__c</fullName>
        <globalPicklist>Final_Level_of_Education</globalPicklist>
        <label>Final Education Level</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Laptop__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Laptop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Level_Required__c</fullName>
        <globalPicklist>Position</globalPicklist>
        <label>Level Required</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_Language__c</fullName>
        <label>Other Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Qualifications__c</fullName>
        <label>Other Qualifications</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Frequency_Type_Monthly__c</fullName>
        <globalPicklist>Work_Frequency_Type_Monthly</globalPicklist>
        <label>Work Frequency Type - Monthly</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Work_Frequency_Type_Weekly__c</fullName>
        <globalPicklist>Work_Frequency_Type_Weekly</globalPicklist>
        <label>Work Frequency Type - Weekly</label>
        <type>Picklist</type>
    </fields>
    <label>Requirement</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>J-{00000}</displayFormat>
        <label>Job Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requirements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>